--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: "python:3.7"
 before_script:
   - python --version
   - pip install pipenv
-  - pipenv install --dev
+  - pipenv install 
 
 stages:
   - Test
