--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,8 @@ image: "python:3.7"
 before_script:
   - python --version
   - pip install pipenv
-  - pipenv install 
+  - pipenv lock --requirements > requirements.txt
+  - pip install -r  requirements.txt
 
 stages:
   - Test
